@@ -1,1 +1,1 @@
-#define SERIALNUM "20000516_2"
+#define SERIALNUM "20000525_1"
